Adding CSS inline and internal

--- a/index.html
+++ b/index.html
@@ -6,22 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB DEV Course</title>
+    <style>
+        a:visited{
+            color: yellow;
+        }
+        .links:hover{
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <h1>Web Dev Tutorial</h1>
+        <nav>
+            <ol type="i" style="color: white; background-color: navy;">
+                <li><a class="links" href="table.html" target="_blank">Tables</a></li>
+                <li><a class="links" href="youtube.html" target="_blank">Youtube Videos</a></li>
+                <li><a class="links" href="wikipedia.html" target="_blank">Wikipedia</a></li>
+                <li><a class="links" href="form.html" target="_blank">Forms</a></li>
+            </ol>
+        </nav>
     </header>
     <main>
         <section>HEHEHE</section>
-        <section>
-            <ol type="i">
-                <li><a href="table.html" target="_blank">Tables</a></li>
-                <li><a href="youtube.html" target="_blank">Youtube Videos</a></li>
-                <li><a href="wikipedia.html" target="_blank">Wikipedia</a></li>
-                <li><a href="form.html" target="_blank">Forms</a></li>
-            </ol>
-        </section>
         <article>HEYO WASSUP
             <hr>
             <center>
