--- a/form.html
+++ b/form.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Form</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+    </style>
 </head>
 <body>
     <header>
-        <h1>My Form></h1>
+        <h1 class="formhead">My Form</h1>
     </header>
     <main>
         <section>
@@ -16,20 +19,32 @@
         </section>
         <article>
             <form action="greetings.html">
-                <pre>
-                Name    <input type="text" placeholder="Enter full name" name="pname"> <br>
-                Roll No <input type="text" name="roll"> <br>
-                Mobile  <input type="text" name="mobile"> <br>
-                <textarea name="addr" id="addr" cols="30" rows="10" placeholder="Enter Complete Address..."></textarea> <br>
-                Gender: <input type="radio" name="gender" value="M" placeholder="Male">Male     <input type="radio" name="gender" value="F">Female <br>
-                Hobbies: <input type="checkbox" name="hobby" id="eat">EAT   <input type="checkbox" name="hobby" id="drink">DRINK    <input type="checkbox" name="hobby" id="chat">CHATTING <br>
-                <input type="submit" value="SUBMIT">    <input type="reset" value="RESET">
-            </pre>
+                <center>
+                    <pre>
+Name    <input type="text" placeholder="Enter full name" name="pname"> <br>
+Roll No <input type="text" name="roll"> <br>
+Mobile  <input type="text" name="mobile"> <br>
+<textarea name="addr" id="addr" cols="30" rows="10" placeholder="Enter Complete Address..."></textarea> <br>
+Gender: <input type="radio" name="gender" value="M" placeholder="Male">Male     <input type="radio" name="gender" value="F">Female <br>
+Hobbies: <input type="checkbox" name="hobby" id="eat">EAT   <input type="checkbox" name="hobby" id="drink">DRINK    <input type="checkbox" name="hobby" id="chat">CHATTING <br>
+<input type="submit" value="SUBMIT">    <input type="reset" value="RESET">
+                    </pre>
+                </center>
             </form>
         </article>
     </main>
     <footer>
-
+        <nav>
+            <a href="index.html">BackToMainMenu</a>
+            <a href="">AboutUs</a>
+            <big style="font-family: monospace; color:yellow; word-spacing: 0pt;">&copy; TheCharan</big>
+            <select name="contact" id="contact">
+                <option value="default">Contact Us</option>
+                <option value="charan@2k.com">Mail</option>
+                <option value="@thecharan316">Instagram</option>
+                <option value="CharanVaddepally">Facebook</option>
+            </select>
+        </nav>
     </footer>
 </body>
 </html>
