--- a/form.html
+++ b/form.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Form</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-    </style>
 </head>
 <body>
     <header>
@@ -35,7 +33,7 @@ Hobbies: <input type="checkbox" name="hobby" id="eat">EAT   <input type="checkbo
     </main>
     <footer>
         <nav>
-            <a href="index.html">BackToMainMenu</a>
+            <a href="index.html">HomePage</a>
             <a href="">AboutUs</a>
             <big style="font-family: monospace; color:yellow; word-spacing: 0pt;">&copy; TheCharan</big>
             <select name="contact" id="contact">
