--- a/index.html
+++ b/index.html
@@ -6,108 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB DEV Course</title>
-    <style>
-        a:visited{
-            color: yellow;
-        }
-        .links:hover{
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <h1>Web Dev Tutorial</h1>
-        <nav>
-            <ol type="i" style="color: white; background-color: navy;">
-                <li><a class="links" href="table.html" target="_blank">Tables</a></li>
-                <li><a class="links" href="youtube.html" target="_blank">Youtube Videos</a></li>
-                <li><a class="links" href="wikipedia.html" target="_blank">Wikipedia</a></li>
-                <li><a class="links" href="form.html" target="_blank">Forms</a></li>
-            </ol>
-        </nav>
+        <div class="Header">
+            <h1>Web Dev Tutorial</h1>
+        </div>
+            <nav class="Nav-bar">
+                <a style="padding: 5%;" class="links" href="table.html" target="_blank">Tables</pre></a>
+                <a style="padding: 5%;" class="links" href="youtube.html" target="_blank">YoutubeVideos</a>
+                <a style="padding: 5%;" class="links" href="wikipedia.html" target="_blank">Wikipedia</a>
+                <a style="padding: 5%;" class="links" href="form.html" target="_blank">Forms</a>
+            </nav>
     </header>
     <main>
-        <section>HEHEHE</section>
-        <article>HEYO WASSUP
+        <section style="color: cornflowerblue;">HEHEHE</section>
+        <article>
+            HEYO WASSUP
             <hr>
             <center>
-                <pre>
             <p>
-                Okay so this
+                Okay... So, this <br>
                 is my first
                 website.
             </p>
-            </pre>
-                <hr>
-                <img src="images/DP.jpg" alt="Apun ka Image">
-                <hr>
-                <a href="https://github.com/Charan2k" target="_blank"><b><big>My Github</big></b></a>
-                <hr>
-                <video src="images/suraj-rapper.mp4" controls=true autoPictureInPicture=true></video>
-                <hr>
-                <a href="https://memes.com/" target="_blank" rel="noreferrer"><img src="/images/memer_plan.jpg"
-                        alt="Say Hemlo to Memer"></a>
             </center>
         </article>
-        <hr>
-        <section>
-            <div>
-                Aur Bhai
-            </div>
-            hehehehe
-            <span>
-                Kem Cho baka
-            </span>
-            hehehehehe
-        </section>
-        <hr>
-        <hr>
-        <section>
-            <div>
-                <table>
-                    <tr>
-                        <th>Name</th>
-                        <th>Roll no.</th>
-                        <th>Marks</th>
-                    </tr>
-                    <tr>
-                        <td>Akash</td>
-                        <td>501</td>
-                        <td>96.96</td>
-                    </tr>
-                    <tr>
-                        <td>Sharan</td>
-                        <td>502</td>
-                        <td>90.90</td>
-                    </tr>
-                    <tr>
-                        <td>Charan</td>
-                        <td>505</td>
-                        <td>69.69</td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-        <hr>
-        <hr>
-        <section>
-            <center>
-            <div>
+                <hr>
+                <div class="Content">
+                <img src="images/DP.jpg" alt="Apun ka Image" width="1000" height="1000">
+                <video src="images/suraj-rapper.mp4" controls=true autoPictureInPicture=true width="45%" height="45%"></video>
+                <a href="https://memes.com/" target="_blank" rel="noreferrer"><img height="45%" width="45%" src="/images/memer_plan.jpg"
+                    alt="Say Hemlo to Memer"></a>
                 <iframe width="1200" height="800" src="https://www.youtube.com/embed/YRNyamyBOIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
-            </div>
-            <hr>
-            <hr>
-                <div>
-                    <iframe src="https://www.wikipedia.org" frameborder="10" width="1300" height="1000"></iframe>
-                </div>
-            </center>
-        </section>
-    </main>
-    <hr>
-    <footer>FOOTER</footer>
+</main>
+<hr>
+<footer>
+    <nav>
+        <a href="index.html">HomePage</a>
+        <a href="">AboutUs</a>
+            <big style="font-family: monospace; color:yellow; word-spacing: 0pt;">&copy; TheCharan</big>
+            <select name="contact" id="contact">
+                <option value="default">Contact Us</option>
+                <option value="charan@2k.com">Mail</option>
+                <option value="@thecharan316">Instagram</option>
+                <option value="CharanVaddepally">Facebook</option>
+            </select>
+        </nav>
+    </footer>
     <hr>
 </body>
 
