Added some css to login

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
         </article>
                 <hr>
                 <div class="Content">
-                <img src="images/DP.jpg" alt="Apun ka Image" width="1000" height="1000">
-                <video src="images/suraj-rapper.mp4" controls=true autoPictureInPicture=true width="45%" height="45%"></video>
+                <img src="images/DP.jpg" alt="Apun ka Image" width="45%" height="45%">
+                <video src="images/suraj-rapper.mp4" controls=true autoPictureInPicture=true></video>
                 <a href="https://memes.com/" target="_blank" rel="noreferrer"><img height="45%" width="45%" src="/images/memer_plan.jpg"
                     alt="Say Hemlo to Memer"></a>
-                <iframe width="1200" height="800" src="https://www.youtube.com/embed/YRNyamyBOIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                <iframe width="45%" height="600px" src="https://www.youtube.com/embed/YRNyamyBOIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
+                </div>
 </main>
 <hr>
 <footer>
