login2 css done

--- a/login.html
+++ b/login.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <main>
-        <section>
+        <section class="main">
             <div class="login">
-                <h1 class="log">Login Here</h1>
+                <h1 class="log">LOGIN HERE</h1>
                 <span class="boxes">
                     <i class="fa fa-user"></i>
-                    <input type="text" name="uname" placeholder="Username"> <br>
+                    <input type="text" name="uname" placeholder="Username" style="margin-left: 5px;"> <br>
                 </span>
                 <span class="boxes">
                     <i class="fa fa-key"></i>
@@ -24,6 +24,9 @@
                 <br>
                 <span class="button">
                     <input type="submit" value="Sign in">
+                </span>
+                <span>
+                    <a href="register.html">Not registered?<br>Sign up.</a>
                 </span>
             </div>
         </section>
