--- a/form.html
+++ b/form.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Form</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background: url(/images/background.jpg) no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -23,8 +29,9 @@ Name    <input type="text" placeholder="Enter full name" name="pname"> <br>
 Roll No <input type="text" name="roll"> <br>
 Mobile  <input type="text" name="mobile"> <br>
 <textarea name="addr" id="addr" cols="30" rows="10" placeholder="Enter Complete Address..."></textarea> <br>
-Gender: <input type="radio" name="gender" value="M" placeholder="Male">Male     <input type="radio" name="gender" value="F">Female <br>
-Hobbies: <input type="checkbox" name="hobby" id="eat">EAT   <input type="checkbox" name="hobby" id="drink">DRINK    <input type="checkbox" name="hobby" id="chat">CHATTING <br>
+Gender:    <input type="radio" name="gender" value="M" placeholder="Male">Male     <input type="radio" name="gender" value="F">Female <br>
+Hobbies:<input type="checkbox" name="hobby" id="eat">EAT   <input type="checkbox" name="hobby" id="drink">DRINK    <input type="checkbox" name="hobby" id="chat">CHATTING <br>
+Password: <input type="password" name="pass" placeholder="aA@123$"><br>
 <input type="submit" value="SUBMIT">    <input type="reset" value="RESET">
                     </pre>
                 </center>
